--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@syncfusion/ej2-react-schedule": "^19.4.50",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "cldr-data": "^36.0.1",
     "express": "^4.18.2",
     "mysql2": "^3.5.2",
     "react": "^17.0.2",
